# sancuary-player

./: README.md  eslint.config.ts  index.html  package.json  playwright.config.ts  vite.config.ts
deploy/: nginx.conf
docs/: architecture.md  deployment.md  development.md  features.md
e2e/: library.spec.ts  services.spec.ts  vue.spec.ts
e2e/fixtures/: generate.mjs
public/audio/: README.md  manifest.json
public/sancuary-player.icon/: icon.json
scripts/: deploy.sh  prepare-demo-audio.mjs
src/: App.vue  types.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: database.rs  lib.rs  main.rs
src/__tests__/: setup.ts
src/__tests__/helpers/: audio.ts
src/assets/: base.css  main.css  print.css  theme.css
src/components/: AppHeader.vue  AppIcon.vue  AudioOutputs.vue  BundledLoader.vue  Icon.vue  PlayerBar.vue  PlaylistRow.vue  ServiceCard.vue  ServiceEditor.vue  SongImporter.vue  SongPicker.vue  VolumeSlider.vue  Waveform.vue
src/components/__tests__/: AppIcon.spec.ts  PlayerBar.spec.ts  PlaylistRow.spec.ts  ServiceCard.spec.ts  SongImporter.spec.ts  SongPicker.spec.ts  VolumeSlider.spec.ts
src/composables/: useKeyboardShortcuts.ts  useMediaSession.ts
src/composables/__tests__/: useMediaSession.spec.ts
src/db/: idb.ts  sqlite.ts
src/router/: index.ts
src/stores/: library.ts  player.ts  services.ts  settings.ts
src/utils/: backup.ts  index.ts  waveform.ts
src/views/: LibraryView.vue  NowPlayingView.vue  ServiceDetailView.vue  ServicesView.vue
(+14 files in other folders)
